set(WIN_BIN_DIR_NAME bin_${IBTS_PLATFORM_BIN})

install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${WIN_BIN_DIR_NAME}
    DESTINATION ${IBTS_INSTALL_DIR}
    PATTERN "*")

set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")
set(ZLIB_LIBRARY zdll CACHE INTERNAL "")
set(ZLIB_INCLUDE_DIRS ${ZLIB_INCLUDE_DIR} CACHE INTERNAL "")
set(ZLIB_LIBRARIES ${ZLIB_LIBRARY} CACHE INTERNAL "")

set(LUAJIT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")
set(LUAJIT_LIBRARIES luajit CACHE INTERNAL "")

set(SDL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "" FORCE)
set(SDL_LIBRARIES "SDL;SDL_image;SDL_mixer" CACHE INTERNAL "" FORCE)

if(${IBTS_TARGET_X64})
    set(PLATFORM_LINK_DIRECTORIES
        ${CMAKE_CURRENT_SOURCE_DIR}/lib64
        ${CMAKE_CURRENT_SOURCE_DIR}/bin_win64 PARENT_SCOPE)
elseif(${IBTS_TARGET_X86})
    set(PLATFORM_LINK_DIRECTORIES
        ${CMAKE_CURRENT_SOURCE_DIR}/lib32
        ${CMAKE_CURRENT_SOURCE_DIR}/bin_win32 PARENT_SCOPE)
endif()

