
project(tommath C)

set(TOMMATH_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    CACHE INTERNAL "LibTommath include directories."
)

include_directories(
    ${TOMMATH_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

set(TOMMATH_LIBRARY libtommath CACHE INTERNAL "libtommath library.")

tig_add_definitions_for(${TOMMATH_LIBRARY})

add_library(${TOMMATH_LIBRARY} STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bncore.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_error.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_fast_mp_invmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_fast_mp_montgomery_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_fast_s_mp_mul_digs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_fast_s_mp_mul_high_digs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_fast_s_mp_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_2expt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_abs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_add_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_addmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_and.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_clamp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_clear.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_clear_multi.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_cmp.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_cmp_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_cmp_mag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_cnt_lsb.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_copy.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_count_bits.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_div_2.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_div_2d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_div_3.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_div_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_dr_is_modulus.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_dr_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_dr_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_exch.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_expt_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_exptmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_exptmod_fast.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_exteuclid.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_fread.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_fwrite.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_gcd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_get_int.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_grow.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_init.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_init_copy.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_init_multi.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_init_set.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_init_set_int.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_init_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_invmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_invmod_slow.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_is_square.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_jacobi.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_karatsuba_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_karatsuba_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_lcm.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_lshd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mod_2d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mod_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_montgomery_calc_normalization.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_montgomery_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_montgomery_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mul_2.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mul_2d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mul_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_mulmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_neg.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_n_root.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_or.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_fermat.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_is_divisible.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_is_prime.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_miller_rabin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_next_prime.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_rabin_miller_trials.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_prime_random_ex.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_radix_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_radix_smap.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_rand.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_read_radix.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_read_signed_bin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_read_unsigned_bin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_2k.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_2k_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_2k_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_2k_setup_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_is_2k.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_is_2k_l.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_reduce_setup.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_rshd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_set.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_set_int.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_shrink.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_signed_bin_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_sqrmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_sub_d.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_submod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_toom_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_toom_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_toradix.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_toradix_n.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_to_signed_bin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_to_signed_bin_n.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_to_unsigned_bin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_to_unsigned_bin_n.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_unsigned_bin_size.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_xor.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_mp_zero.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_prime_tab.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_reverse.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_s_mp_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_s_mp_exptmod.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_s_mp_mul_digs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_s_mp_mul_high_digs.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_s_mp_sqr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/bn_s_mp_sub.c
)

tig_install(${TOMMATH_LIBRARY})

set(TOMMATH_LIBRARIES
    ${TOMMATH_LIBRARY}
    CACHE INTERNAL "Tommath libraries.")